--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,3 @@
 input { padding:2px}
-
-input[type="submit"] {
-    margin: 0 5px;
-}
-
-form {
-    width: 680px;
-    margin: 20vh auto;
-}
+input[type="submit"] {margin: 0 5px;}
+form {width: 680px;margin: 20vh auto;}
